/*----------------------------------------------------------------------------+
 |                                                                            |
 |                               CHANGES                                      |
 |                                                                            |
 +----------------------------------------------------------------------------*/

 0.1.2
 ------
 	* Added native support for CM17A devices
 	* Added an auto-refresh setting to the frontend
 	* Fixed some error handling bugs
 	* Fixed various other minor bugs
	* Added Italian translation
	  Thanks to Stefano Bodini
 	* Added Swedish translation
 	  Thanks to Tobias Axelsson
 	* Updated Dutch translation
 	  Thanks to Frank

 0.1.1 (bug fixes, no new features) - 23/Sep/2007
 ------
 	* Disabled 'short_open_tag' for security reason's
 	  Thanks to Julien Touche for pointing this out
 	* Added Dutch translation
 	  Thanks to Frank
 	* Added French translation
 	  Thanks to 'Child from Korn' and Thierry Moutet
 	* Fixed various PHP warning messages.
 	* Added more error handling code
 	* Changed languages dropdown so that full names are given instead of ie: en_GB
 	* Fixed IE CSS bugs
 	* Implemented a different solution for checking if Heyu is running.
 	  Thanks again to Julien Touche.
 	* Various other fixes/corrections/security enhancements

 0.1 (first release) - 02/Jun/2007
 -----
  Features:
 	* Web based Heyu configuration
 	* Add/Remove/Edit Aliases
    * Alias modules divided by type (Lights, Appliance, etc)
    * ON/OFF Controls for every type
    * DIM/BRIGHT Controls for Lights
    * Multilingual
    * Themeable