@@ -7,7 +7,9 @@
  0.1.2
  ------
  	* Added native support for CM17A devices
+ 	* Added security level's for password protection (none, admin & everything)
  	* Added an auto-refresh setting to the frontend
+ 	* Bug correction with START and STOP for Heyu when on error.php
  	* Fixed some error handling bugs
  	* Fixed various other minor bugs
 	* Added Italian translation
